force-app/main/default/objects/CIBE_Hierarchy__c/CIBE_Hierarchy__c.object-meta.xml
<CustomObject>
    <label>Hierarchy</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>