force-app/main/default/objects/CIBE_Hierarchy__c/fields/CIBE_CentrosCarteras__c.field-meta.xml
<CustomField>
    <fullName>CIBE_CentrosCarteras__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup al valor del registro Centro-Carteras del objeto cbk_picklistValues__c</description>
    <label>Centros-Carteras</label>
    <referenceTo>CBK_PicklistValues__c</referenceTo>
    <relationshipLabel>Hierarchies</relationshipLabel>
    <relationshipName>Hierarchies</relationshipName>
    <type>Lookup</type>
</CustomField>