force-app/main/default/objects/CIBE_Hierarchy__c/fields/CIBE_Contact__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup a contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hierarchies</relationshipLabel>
    <relationshipName>Hierarchies</relationshipName>
    <type>Lookup</type>
</CustomField>