force-app/main/default/objects/CIBE_Hierarchy__c/fields/CIBE_Negocios__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Negocios__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup al valor del registro Negocios del objeto cbk_picklistValues__c</description>
    <label>Negocios</label>
    <referenceTo>CBK_PicklistValues__c</referenceTo>
    <relationshipLabel>Hierarchies (Negocios)</relationshipLabel>
    <relationshipName>Hierarchies2</relationshipName>
    <type>Lookup</type>
</CustomField>