force-app/main/default/objects/CIBE_Hierarchy__c/fields/CIBE_RedesSegmentos__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RedesSegmentos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup al valor del registro Redes-Segmentos del objeto cbk_picklistValues__c</description>
    <label>Redes-Segmentos</label>
    <referenceTo>CBK_PicklistValues__c</referenceTo>
    <relationshipLabel>Hierarchies (Redes-Segmentos)</relationshipLabel>
    <relationshipName>Hierarchies1</relationshipName>
    <type>Lookup</type>
</CustomField>