force-app/main/default/objects/CIBE_Hierarchy__c/fields/CIBE_SectoresPaises__c.field-meta.xml
<CustomField>
    <fullName>CIBE_SectoresPaises__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup al valor del registro Sectores-Paises del objeto cbk_picklistValues__c</description>
    <label>Sectores-Paises</label>
    <referenceTo>CBK_PicklistValues__c</referenceTo>
    <relationshipLabel>Hierarchies (Sectores-Paises)</relationshipLabel>
    <relationshipName>Hierarchies3</relationshipName>
    <type>Lookup</type>
</CustomField>