force-app/main/default/objects/CIBE_Hierarchy__c/recordTypes/CIBE_Employee.recordType-meta.xml
<RecordType>
    <fullName>CIBE_Employee</fullName>
    <active>true</active>
    <label>Employee</label>
</RecordType>